--- a/mobilev2/app/theme/app.core.scss
+++ b/mobilev2/app/theme/app.core.scss
@@ -16,3 +16,5 @@
 @import "../pages/page2/page2";
 @import "../pages/page3/page3";
 @import "../pages/cart/cart";
+@import "../pages/account/account";
+@import "../components/loading-modal/loading-modal";
