Area class added Mobile app shifted to sql storage Web services updated.

--- a/mobilev2/app/theme/app.core.scss
+++ b/mobilev2/app/theme/app.core.scss
@@ -20,6 +20,7 @@
 @import "../components/loading-modal/loading-modal";
 @import "../pages/delivery/delivery.scss";
 @import "../pages/address/address.scss";
+@import "../pages/payment/payment.scss";
 
 .item {
     padding-left: 0;
