--- a/mobilev2/app/pages/detail/detail.scss
+++ b/mobilev2/app/pages/detail/detail.scss
@@ -1,3 +1,12 @@
-.detail {
+.detail .item-inner {
+    border-bottom: none;
+}
 
+.subitem ion-select {
+  width: 100%;
+  max-width: 100%;
+}
+
+.toolbar-background {
+    background-color: rgba(255,255,255,.66) !important;
 }
