--- a/mobilev2/app/pages/home/home.scss
+++ b/mobilev2/app/pages/home/home.scss
@@ -1,21 +1,9 @@
-.home .subitem {
-  padding-left: 0;
-}
-
 .home .content {
   border-bottom: 1px solid #DDD;
 }
 
 .home .item-inner {
   border-bottom: none;
-}
-
-.home .subitem ion-select {
-  width: 80%;
-  border-radius: 5px;
-  border: 1px solid #DDD;
-  padding: 2px 5px;
-  max-width: 80%;
 }
 
 .button-fab {
@@ -27,4 +15,8 @@ a.button {
   font-size: 150%;
   padding: 0 10px;
   line-height: 50px;
+}
+
+ion-slides {
+  height: inherit;
 }
