--- a/mobilev2/app/theme/app.variables.scss
+++ b/mobilev2/app/theme/app.variables.scss
@@ -26,5 +26,6 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  favorite:   #69BB7B
+  favorite:   #69BB7B,
+  tomato:     #FF0000
 ) !default;
