--- a/mobilev2/app/theme/dark.scss
+++ b/mobilev2/app/theme/dark.scss
@@ -1,19 +1,20 @@
 // Dark Theme
 // — — — — — — — — — — — — — — — — — 
 $colors: (
-primary: #387ef5,
+ primary: #387ef5,
  secondary: #32db64,
  danger: #f53d3d,
  light: #fff,
  dark: #333,
 ) !default;
+
 $text-color: #fff !default;
 $background-color: #222 !default;
 $list-text-color: $text-color !default;
 $list-background-color: $background-color !default;
 $list-border-color: #666 !default;
 $link-color: map-get($colors, primary) !default;
-$toolbar-background-color: #111 !default;
+$toolbar-background-color: #D40000 !default;
 $toolbar-border-color: #000 !default;
 $toolbar-text-color: $text-color !default;
 $toolbar-active-color: $link-color !default;
