Updated backend and app files

--- a/mobilev2/app/theme/app.core.scss
+++ b/mobilev2/app/theme/app.core.scss
@@ -78,6 +78,10 @@ ion-slide img {
     border-bottom: 0;
 }
 
+form .item-inner {
+    border-bottom: 1px solid #DDD; 
+}
+
 .buttons {
     background: #EEE;
     padding: 0;
