--- a/mobilev2/app/theme/app.variables.scss
+++ b/mobilev2/app/theme/app.variables.scss
@@ -27,5 +27,7 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   favorite:   #69BB7B,
-  tomato:     #FF0000
 ) !default;
+
+$text-color: #000;
+$toolbar-text-color: $text-color !default;
