Updated app files

--- a/mobilev2/app/pages/home/home.scss
+++ b/mobilev2/app/pages/home/home.scss
@@ -39,3 +39,9 @@ ion-title img {
 .home h2 {
   padding: 0 10px;
 }
+
+.item {
+  padding-left: 16px !important;
+  border-bottom: 1px solid #DDD;
+  cursor: pointer;
+}
