--- a/mobilev2/app/pages/address/address.scss
+++ b/mobilev2/app/pages/address/address.scss
@@ -1,3 +1,8 @@
-.address {
+.address ion-item {
+    border-bottom: none;
+}
 
+.address .error-box {
+    padding-left: 16px;
+    background: #FFF;
 }
